@startuml

!theme mytheme

skinparam dpi 200

package "<color:ccc>base</color>" {

  class TBModel{
    'Attributes
    # int nOrb
    # int nDim
    # vector<Hop> hop
    # vector<OnSite> onSite
    'Methods
    + void setHop()
    + void setOnSite()
    + Hop getHop()
    + OnSite getOnSite()
  }

  class Hop{
    -complex<double> hop
    -int nOrb1
    -int nOrb2
    -int * n
    -int nDim
    + setHop()
  }

  class OnSite{
    -complex<double> en
    -int nOrb
    + setEn()
  }

  class OData{
    + void eBands2D(Hamiltonian &, ...)
    + void chargeDensity(Hamiltonian &, ...)
    + void wannierBands(Hamilonian &, ...)
  }

  abstract class Hamiltonian{
  +virtual cx_mat H(double * k = NULL) = 0
  +virtual sp_cx_mat spH(double * k = NULL) = 0
  +virtual cx_mat blockH(int, int, double * k = NULL) = 0
  - bool isSparse
}

class Wilson {
  + Wilson(Hamiltonian *)
  + cx_mat wilsonLoop()
  + cx_mat nestedWilsonLoop()
  + cx_mat nestedNestedWilsonLoop()
  + cx_mat wilsonLoopSupercell()
  + cx_mat nestedWilsonLoopSupercell()
  + cx_mat nestedNestedWilsonLoopSupercell()
}

class DOS{
  + double kpm(double en, ...)
}

class MultipoleOp{
  + MultipoleOp(Hamiltonian *, ...)
  + double polarization()
  + double quadrupole()
  + double octupole()
}

class LocalizationProps {
  + LocalizationStats(Hamiltonian *)
  + double ipr()
  + double tmm()
  + double lsr()
  + double gap()
}

class TBCleanH{
  + TBCleanH(TBModel)
  + void setSparse()
}

class TBDisorderedH2D{
  + TBDisorderedH(TBModel)
  + void setSparse()
}

class TBDisorderedH3D{
  + TBDisorderedH(TBModel)
  + void setSparse()
}

class BoundaryGreenH{
  + BoundaryGreenH(Hamiltonian *, ...)
}

Wilson o-- Hamiltonian
DOS o-- Hamiltonian
MultipoleOp o-- Hamiltonian
OData o..Hamiltonian

Hamiltonian <|-- TBCleanH
TBCleanH <|-- TBDisorderedH2D
TBCleanH <|-- TBDisorderedH3D
Hamiltonian <|-- BoundaryGreenH

TBCleanH o-- TBModel
TBDisorderedH2D o-- TBModel
TBDisorderedH3D o-- TBModel

TBModel o-- OnSite
TBModel o-- Hop

legend center
  | Color | Type |
  |<#$BOXBG>| Done |
  |<#yellow>| TODO |
endlegend
}

@enduml
